<resources>
    <string name="app_name">Techtogether2020</string>
    <string name="name">APP NAME</string>
    <string name="signin">SIGN IN</string>
    <string name="signup">SIGN UP</string>
    <string name="email">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="fullname">FULL NAME</string>   
    <string name="interests">INTERESTS</string>
    <string-array name="interests_array">
        <item></item>
        <item>Hackathons</item>
        <item>Running</item>
        <item>Cooking</item>
        <item>Music</item>
        <item>Animals</item>
        <item>Technology</item>
    </string-array>
</resources>